--- a/index.html
+++ b/index.html
@@ -1,63 +1,76 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>Bussiopas</title>
-  <meta name="description" content="Tampereen bussihaku">
-  <meta name="author" content="Jussi">
-
-  <link rel="stylesheet" href="css/style.css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-  	
-
-  	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-	<script src="js/app.js"></script>
-
-</head>
-
-<body ng-app="bussiopas" ng-controller="mainCtrl">
-
-<div class="container">
-	<div class="navbar navbar-fixed-top">
-	<div class="row text-center text-primary">
-	<h2 style="color: white">Lähin bussipysäkki Tampereella</h2>
-	</div>
 
 
-	<div align="center" class="col-xs-offset-3 col-xs-6 col-xs-offset-3">
-		<form ng-submit="getLines()">
-		<input ng-model="osoite" required type="text" placeholder="Sijaintisi(katuosoite)"></input>
-		<button type="submit">Etsi</button>
-		</form>
-	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
+				<!-- <div class="gotElement well text-primary" ng-repeat="linja in linjat"> -->
+				<span id="lahinEtaisyys"> ({{roundToInt(stop.distance)}} m)</span><br></span>
+				<span id="lahinPysakki">{{stop.name}}</span></strong> 
+				<span><strong>{{busStops.indexOf(stop) + 1}}.</strong> lähin bussipysäkki: <strong>
+			</div>
+			<div ng-repeat="stop in busStops">
+		<!-- <span>{{processTime}}</span> -->
+		<!--<input class="hakuboksi1" ng-model="aloitus" required type="text" placeholder="Alkusijainti esim. Ilmarinkatu 34"></input><br>-->
 		</div>
-
-
-	<div class="contentarea well col-md-offset-3 col-md-6 col-md-offset-3">
-	<span>Lähin bussipysäkki: <strong>{{nearestStop}}</strong> {{nearestDistance}}<br></span>
-	<div class="gotElement well text-primary" ng-repeat="linja in linjat">
-	<br>
+		</div>
+		<div align="center" class="input-group col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
+		<div class="contentarea well col-md-offset-3 col-md-6 col-sm-8 col-sm-offset-2 col-xs-12">
+		<input class="form-control" ng-model="osoite" required type="text" placeholder="Sijainti esim. Itsenäisyydenkatu 2"></input>
+		<span class="input-group-btn"><button class="btn btn-primary" type="submit">Etsi</button></span>
+	<!-- scripts, scrolls and other wizardry -->
 	</div>
 	</div>
-</div>
-
-
-
-
-
-
-
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</form>
+	<div class="col-md-offset-3 col-md-6 col-sm-8 col-sm-offset-2 col-xs-12">
+	<div class="jumbotron col-md-offset-3 col-md-6 col-sm-8 col-sm-offset-2 col-xs-12" style="padding: 0px">
+	<div class="page-header text-center">
+	<div class="row">
+	<div class="row">
+	<div class="row">
+	<div class="row">
+	<form ng-submit="getLines()">
+	<h2>Lähimmät bussipysäkit Tampereella</h2>
+	<h4>Ohjelma Tampereen bussiliikenteen API:n testaamiseen</h4>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<p align="center"><a href="http://www.facebook.com/voiii/"><i class="fa fa-4x fa-facebook-square"></i></a> <a href="http://github.com/jussisaurio/"><i class="fa fa-4x fa-github"></i></a> <a href="mailto:jussi.saurio@gmail.com"><i class="fa fa-4x fa-envelope"></i></a></p>
+	<p class="desctext">Tarkoituksenani on hiljalleen lisäillä tähän sovellukseen ihan oikeitakin (ts. hyödyllisiä) toiminnallisuuksia, kohti uutta Repa Reittiopasta ja sen yli. Mahdollisesti palvelinpuolelle voisi tallentaa jotain istuntodataa jolla sitten personoida näkymää palaaville käyttäjille. Lähinnä homman nimi on kuitenkin (ainakin tähän mennessä) ollut yleinen APInointi ja JSON-derulo-tyyppinen autodidaktinen sähellys.</p>
+	<p class="desctext">Tyylit purkkaviritelty kasaan Bootstrapilla, dynaamisten elementtien esitys hoidettu Angular-yks-piste-jollakin ja HTTP-anelut jQueryllä, tosin sekin taitais perusjutuiltaan olla integroituna tossa Angularissa.</p>
+	<p class="desctext">Tämä ohjelma hakee ensin Geocode API:sta käyttäjän syöttämän tamperelaisen osoitteen koordinaatit ja etsii sen jälkeen lähietäisyydeltä bussipysäkkejä TKL:n API:sta. Ohjelma pyrkii hakemaan kolme lähintä bussipysäkkiä etsimällä ensin 400m koordinaattiboksista, ja jos pysäkkejä on alle 3, se lisää sädettä 100 metrillä ja etsii uudestaan. Tämän jälkeen ohjelma laskee etäisyydet ja esittää ne järjestyksessä. Etäisyyksien laskemiseen käytetään Haversine-kaavaa, mikä helkutti moinen sitten Suomeksi lieneekään, nimim. pitkä matematiikka käyty 10+ vuotta sitten.</p>
+  
+  	
+  <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <meta name="author" content="Jussi">
+  <meta name="description" content="Tampereen bussihaku">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/app.js"></script>
+  <title>Bussiopas</title>
+<!doctype html>
 </body>
+</div>
+</head>
 </html>
+<body ng-app="bussiopas" ng-controller="mainCtrl">
+<div class="container">
+<head>
+<html lang="en">
